--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "SIMI-MD",
   "description": "Javascript WhatsApp bot made by DILA",
-  "logo": "https://pomf2.lain.la/f/uzu4feg.jpg",
+  "logo": "https://pomf2.lain.la/f/nylzm29e.png",
   "keywords": ["bot"],
   "success_url": "/",
 
